more fixing tests